# mlyomi

./: DockerFile  README.md  deck.py  dtw_families.py  idtw_kedoids.py  pyproject.toml  yomi_komatsu_201812.md  yomi_komatsu_201812.py
.devcontainer/: devcontainer.json
src/: exec_idtw_kmedoids.py  hamuro_okada_jsai2016.py  idtw_kmedoids.py  onlinelearning.py
src/data/: toyota..csv
